backend/kubernetes/payment-simple-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: payment-simple-ms
  name: payment-simple-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: payment-simple-ms
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        # io.kompose.network/backend-gobbler-net: "true"
        io.kompose.service: payment-simple-ms
    spec:
      containers:
        - env:
            - name: DATABASE
              value: payment
            - name: DB_PASSWORD
              # value: ${DATABASE_PASSWORD}
              valueFrom:
                secretKeyRef:
                  name: gobbler
                  key: DATABASE_PASSWORD
            - name: DB_PORT
              value: "3306"
            - name: DB_SERVER
              value: payment-mysql
            - name: DB_USER
              # value: ${DATABASE_USER}
              valueFrom:
                secretKeyRef:
                  name: gobbler
                  key: DATABASE_USER
            - name: STRIPE_API_KEY
              # value: ${STRIPE_API_KEY}
              valueFrom:
                secretKeyRef:
                  name: gobbler
                  key: STRIPE_API_KEY
          image: asia-southeast1-docker.pkg.dev/${GCP_PROJECT_ID}/gobbler/payment-simple-ms:latest
          name: payment-simple-ms
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
