backend/kubernetes/authentication-service-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: authentication-service-postgres
  name: authentication-service-postgres
spec:
  ports:
    - name: "5400"
      port: 5400
      targetPort: 5432
  selector:
    io.kompose.service: authentication-service-postgres
status:
  loadBalancer: {}
