backend/kubernetes/authentication-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: authentication-service
  name: authentication-service
spec:
  ports:
    - name: "5401"
      port: 5401
      targetPort: 5401
  selector:
    io.kompose.service: authentication-service
status:
  loadBalancer: {}
