backend/kubernetes/payment-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: payment-mysql
  name: payment-mysql
spec:
  ports:
    - name: "5005"
      port: 5005
      targetPort: 3306
  selector:
    io.kompose.service: payment-mysql
status:
  loadBalancer: {}
