backend/kubernetes/payment-simple-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: payment-simple-ms
  name: payment-simple-ms
spec:
  ports:
    - name: "5006"
      port: 5006
      targetPort: 8080
  selector:
    io.kompose.service: payment-simple-ms
status:
  loadBalancer: {}
