backend/kubernetes/user-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: user-postgres
  name: user-postgres
spec:
  ports:
    - name: "5007"
      port: 5007
      targetPort: 5432
  selector:
    io.kompose.service: user-postgres
status:
  loadBalancer: {}
