backend/kubernetes/backend-gobbler-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: backend-gobbler-net
spec:
  ingress:
    - from:
      - podSelector:
          matchLabels:
            io.kompose.network/backend-gobbler-net: "true"
      - podSelector:
          matchLabels:
            io.kompose.service: "kong"
  podSelector:
    matchLabels:
      io.kompose.network/backend-gobbler-net: "true"
